--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,5 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
